@@ -1,3 +1,9 @@
+2017-10-30 Riccardo Mottola <rm@gnu.org>
+
+	* DBCSVWriter.m
+	* DBHTMLWriter.m
+	Don't choke on arrays of objects coming from nested queries.
+
 2017-10-23 Riccardo Mottola <rm@gnu.org>
 
 	* DBFileWriter.m
